feat: add change language for schema

--- a/src/locales/en/schema/auth.json
+++ b/src/locales/en/schema/auth.json
@@ -1,5 +1,35 @@
 {
   "register": {
-    "f_name": "First name is required"
+    "f_name": "First name is required",
+    "l_name": "Last name is required",
+    "email": "Please enter a valid email",
+    "password": {
+      "min": "Password must be at least 6 characters",
+      "pattern1": "Password must contain at least one lowercase letter",
+      "pattern2": "Password must contain at least one number",
+      "pattern3": "Password must contain at least one special character"
+    }
+  },
+  "login": {
+    "email": "Please enter a valid email",
+
+    "password": {
+      "min": "Password must be at least 6 characters",
+      "pattern1": "Password must contain at least one lowercase letter",
+      "pattern2": "Password must contain at least one number",
+      "pattern3": "Password must contain at least one special characte"
+    }
+  },
+  "re_password": "Passwords do not match",
+  "checkout": {
+    "phone": {
+      "required": "Phone number is required",
+      "pattern": "Phone number must be 10 digits long"
+    },
+    "city": "City is required",
+    "state": "State/Province/Region is required",
+    "zip": "Zip/Postal code is required",
+    "country": "Country is required",
+    "paymentMethod": "Payment Method is required"
   }
 }
