--- a/src/locales/vi/schema/auth.json
+++ b/src/locales/vi/schema/auth.json
@@ -1,5 +1,25 @@
 {
   "register": {
-    "f_name": "Tên là bắt buộc"
-  }
+    "f_name": "Tên là bắt buộc",
+    "l_name": "Họ là bắt buộc",
+    "email": "Hãy nhập một email hợp lệ",
+    "password": {
+      "required": "Mật khẩu là bắt buộc",
+      "min": "Mật khẩu phải có ít nhất 6 ký tự",
+      "pattern1": "Mật khẩu phải chứa ít nhất một chữ cái",
+      "pattern2": "Mật khẩu phải chứa ít nhất một chữ số",
+      "pattern3": "Mật khẩu phải chứa ít nhất một ký tự đặc biệt"
+    }
+  },
+  "login": {
+    "email": "Hãy nhập một email hợp lệ",
+    "password": {
+      "required": "Mật khẩu là bắt buộc",
+      "min": "Mật khẩu phải có ít nhất 6 ký tự",
+      "pattern1": "Mật khẩu phải chứa ít nhất một chữ cái",
+      "pattern2": "Mật khẩu phải chứa ít nhất một chữ số",
+      "pattern3": "Mật khẩu phải chứa ít nhất một ký tự đặc biệt"
+    }
+  },
+  "re_password": "Mật khẩu không khớp"
 }
