fix: translate toast and zod validate

--- a/src/locales/en/auth.json
+++ b/src/locales/en/auth.json
@@ -33,7 +33,8 @@
     "loginFailedDesc": "Email or your password is incorrect",
     "resetPasswordSuccess": "Reset your password successfully",
     "resetPasswordFailed": "Reset your password failed",
-    "resetPasswordFailedDesc": "Your code is invalid or expired"
+    "resetPasswordFailedDesc": "Your code is invalid or expired",
+    "undo": "Undo"
   },
   "email": {
     "forgotPasswordTitle": "Forgot Password",
