--- a/src/locales/vi/auth.json
+++ b/src/locales/vi/auth.json
@@ -33,7 +33,8 @@
     "loginFailedDesc": "Email hoặc mật khẩu của bạn không đúng",
     "resetPasswordSuccess": "Đặt lại mật khẩu thành công",
     "resetPasswordFailed": "Đặt lại mật khẩu thất bại",
-    "resetPasswordFailedDesc": "Mã của bạn không hợp lệ hoặc đã hết hạn"
+    "resetPasswordFailedDesc": "Mã của bạn không hợp lệ hoặc đã hết hạn",
+    "undo": "Tắt"
   },
   "email": {
     "forgotPasswordTitle": "Quên mật khẩu",
