--- a/src/locales/vi/schema/auth.json
+++ b/src/locales/vi/schema/auth.json
@@ -21,5 +21,16 @@
       "pattern3": "Mật khẩu phải chứa ít nhất một ký tự đặc biệt"
     }
   },
-  "re_password": "Mật khẩu không khớp"
+  "re_password": "Mật khẩu không khớp",
+  "checkout": {
+    "phone": {
+      "required": "Số điện thoại là bắt buộc",
+      "pattern": "Số điện thoại phải có 10 chữ số"
+    },
+    "city": "Thành phố là bắt buộc",
+    "state": "Tỉnh/Thành phố/Khu vực là bắt buộc",
+    "zip": "Mã bưu điện là bắt buộc",
+    "country": "Quốc gia là bắt buộc",
+    "paymentMethod": "Phương thức thanh toán là bắt buộc"
+  }
 }
