--- a/src/locales/en/hotel.json
+++ b/src/locales/en/hotel.json
@@ -45,6 +45,7 @@
     }
   },
   "from_price": {
+    "placeholder": "Check-in - Check-out",
     "cancel": "Cancellation",
     "adult": "Adults",
     "child": "Children",
@@ -54,6 +55,7 @@
     "breakfast": "Breakfast",
     "bed": "Extra Bed",
     "errorDate": "Please select a date",
+    "errorDate2": "Please select at least 2 days",
     "errorRoom": {
       "heading": "Please select the correct number of rooms",
       "desc": "The number of guests is greater than the maximum number of people in the room."
