--- a/src/locales/vi/contact.json
+++ b/src/locales/vi/contact.json
@@ -1,7 +1,7 @@
 {
-  "banner_title": "Liên hệ với chúng tôi",
+  "banner_title": "Liên hệ chúng tôi",
   "breadcrumb_home": "Trang chủ",
-  "breadcrumb_contact": "Liên hệ với chúng tôi",
+  "breadcrumb_contact": "Liên hệ chúng tôi",
   "form_title": "Chúng tôi rất muốn nghe ý kiến từ bạn",
   "form_description": "Gửi tin nhắn cho chúng tôi và chúng tôi sẽ phản hồi sớm nhất có thể",
   "placeholder_name": "Tên của bạn",
